# features

./: CMakeLists.txt  README.md  dependencies.cmake  main.cpp
cmake/: addTest.cmake
cmake/modules/: gtest.cmake  opencv.cmake  yaml-cpp.cmake
include/: benchmark.h  feature_extractor.h  feature_matcher.h  utils.h
src/: feature_extractor.cpp  feature_matcher.cpp  utils.cpp
test/: CMakeLists.txt  test_bf_feature_matcher.cpp  test_orb_feature_extractor.cpp
test_data/: extractor_config.yaml
